# artify

./: mosaic_maker_test.ipynb  pyproject.toml
src/: artify.py  sort_enum.py
